<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">闪电云笔记</string>

    <string-array name="drawer_menu_item_ids">
        <item>login</item>
        <item>all</item>
        <item>todo</item>
        <item>block</item>
        <item>done</item>
        <item>remind</item>
        <item>setting</item>
    </string-array>
    <string-array name="drawer_menu_items">
        <item>登录或注册</item>
        <item>全部</item>
        <item>待办</item>
        <item>暂停</item>
        <item>完成</item>
        <item>提醒</item>
        <item>设置</item>
    </string-array>
    <string-array name="todo_plan_date_sorts">
        <item>未设置</item>
        <item>过期</item>
        <item>今天</item>
        <item>明天</item>
        <item>后天</item>
        <item>更晚</item>
    </string-array>
    <string-array name="remind_frequency_items">
        <item>每天</item>
        <item>每周</item>
        <item>每月</item>
        <item>每年</item>
    </string-array>
    <string-array name="setting_list_items">
        <item>账号(手机号)</item>
        <item>密码</item>
        <item>电子邮箱</item>
        <item>关于</item>
        <item>退出</item>
    </string-array>
    <string name="setting_password_old_promot">输入原始密码</string>
    <string name="setting_password_new_promot">输入新密码</string>
    
    
    <string name="setting_mobile_input_sms_code">短信验证码</string>
 <string name="setting_mobile_get_sms_code">获取验证码</string>
 <string name="setting_mobile_get_sms_code_tip">秒后可重新获取验证码</string>
 
    <string name="todo_set_done">已完成</string>
    <string name="todo_set_pause">先暂停</string>
    <string name="login_or_register">登录或注册</string>
    <string name="day">天</string>
    <string name="dialog_delete_title">删除</string>
    <string name="dialog_delete_message">确认要删除吗？</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="action_item_save">保存</string>
    <string name="action_item_cancel">取消</string>
    <string name="action_item_read">浏览</string>
    <string name="action_item_edit">编辑文本</string>
    <string name="action_item_todo">待办日期</string>
    <string name="action_item_remind">提醒</string>
    <string name="action_item_delete">删除</string>
    <string name="dashboard_title">数据统计</string>
    <string name="action_search">Web search</string>
    <string name="action_settings">设置</string>
    <string name="action_todo">待办</string>
    <string name="action_remind">提醒</string>
    <string name="action_normal">普通</string>
    <string name="load_more_data">load_more_data</string>
    <string name="loading_data">loading_data</string>
    <string name="no_more_data">no_more_data</string>
    <string name="newpost_hint">请在这里输入文字&#8230;</string>
    <string name="append_post_hint">追加内容&#8230;</string>
    <string name="current_user">未登录用户&#8230;</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_all">全部</string>
    <string name="tab_todo">待办</string>
    <string name="tab_remind">提醒</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索</string>
    <string name="search_label"></string>
    <string name="settings_description">settings_description</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_failed">网络未连接</string>
    <string name="user_unlogin">用户未登录</string>
    <string name="loading">加载中...</string>
    <string name="title_activity_setting_detail">SettingDetailActivity</string>
    <string name="title_activity_date_list">DateListActivity</string>

</resources>