<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gaotianpu.ftodo.MainActivity" >

    <item
        android:id="@+id/action_websearch"
        android:icon="@drawable/action_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_search"/>

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/action_list_normal"
            android:checked="true"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_normal"/>
        <item
            android:id="@+id/action_list_todo"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_todo"/>
        <item
            android:id="@+id/action_list_remind"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_remind"/>
    </group>

</menu>