<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/txtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="1234567890."  
        android:imeOptions="actionSend"
        android:inputType="text" />

    <Button
        android:id="@+id/btnGetSmsCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/setting_mobile_get_sms_code" />

    <EditText
        android:id="@+id/txtSmsCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:ems="10"
        android:hint="@string/setting_mobile_input_sms_code"
        android:imeOptions="actionSend"
        android:inputType="text" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sure" />

</LinearLayout>