<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:lineSpacingExtra="4dp"
        android:lineSpacingMultiplier="1.2"
        android:padding="8dip"
        android:textSize="16sp" >
    </TextView>

    <EditText
        android:id="@+id/txtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/setting_password_old_promot"
        android:imeOptions="actionSend"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/setting_password_new_promot"
        android:imeOptions="actionSend"
        android:inputType="text" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sure" />

</LinearLayout>