<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" > 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" > 
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/list_tab_all"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/tab_all"
                android:textColor="#FF0000" />
            <TextView
                android:id="@+id/list_tab_todo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/tab_todo"
                android:textColor="#385E0F" />
            <TextView
                android:id="@+id/list_tab_remind"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/tab_remind"
                android:textColor="#1E90FF" />
        
        </FrameLayout> 
    
    </LinearLayout>

</TabHost>